deploy: a4ff1a8a60ddb753367a08c3a539a707ee23df16

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <h2>Multi-plaform binding with Python!</h2>
 <p><img class="emoji" draggable="false" alt="🎤" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f3a4.svg" data-marp-twemoji=""/> <strong>Speaker</strong>: <em>Gianluca Aguzzi</em>, University of Bologna<br />
 <img class="emoji" draggable="false" alt="📧" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f4e7.svg" data-marp-twemoji=""/> Email: <a href="mailto:gianluca.aguzzi@unibo.it">gianluca.aguzzi@unibo.it</a><br />
-<img class="emoji" draggable="false" alt="🌐" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f310.svg" data-marp-twemoji=""/> Personal site: <a href="https://cric96.github.io/">https://cric96.github.io/</a></p>
+<img class="emoji" draggable="false" alt="🌐" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f310.svg" data-marp-twemoji=""/> Personal site: <a href="https://cric96.github.io/">https://cric96.github.io/</a><br />
+PDF slides @ <a href="https://cric96.github.io/phd-course-python-binding/">https://cric96.github.io/phd-course-python-binding/index.pdf</a></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-theme="gaia" style="--theme:gaia;">
 <h1>Outline</h1>
