--- a/index.html
+++ b/index.html
@@ -645,24 +645,24 @@ close_window()
 <h1>Assignment</h1>
 <ul>
 <li>
-<p><em>Goal</em>: Create a binding between two different platforms</p>
+<p><strong>Goal</strong>: Develop bindings between two different platforms, such as:</p>
 <ul>
-<li><strong>Native</strong> (C/C++) and <strong>Python</strong>; or <strong>Native</strong> and <strong>Kotlin</strong>; or <strong>Python</strong> and <strong>Java</strong></li>
+<li><strong>Native</strong> (C/C++) <img class="emoji" draggable="false" alt="➡️" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/27a1.svg" data-marp-twemoji=""/> <strong>Python</strong>, or <strong>Native</strong> <img class="emoji" draggable="false" alt="➡️" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/27a1.svg" data-marp-twemoji=""/> <strong>Kotlin</strong>, or <strong>Python</strong> <img class="emoji" draggable="false" alt="➡️" src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/27a1.svg" data-marp-twemoji=""/> <strong>Java</strong></li>
 </ul>
 </li>
 <li>
-<p><em>Requirements</em>:</p>
+<p><strong>Requirements</strong>:</p>
 <ul>
-<li><strong>Native</strong> code with at least one function and one structure (minimum): look at <a href="https://github.com/oz123/awesome-c">awesome c libraries</a></li>
-<li>Create an idiomatic interface in the target language</li>
+<li><strong>Native</strong> code containing at least one function and one structure. Refer to <a href="https://github.com/oz123/awesome-c">awesome C libraries</a> for examples.</li>
+<li>Create an idiomatic interface in the target language.</li>
 </ul>
 </li>
 <li>
-<p><em>Deliverables</em>:</p>
+<p><strong>Deliverables</strong>:</p>
 <ul>
-<li>A <strong>GitHub repository</strong> with the code and a report which includes (<strong>at least</strong>):
+<li>A <strong>GitHub repository</strong> containing <em>the code</em> and a <em>report</em> that includes (at least):
 <ul>
-<li><strong>Design choices</strong> what makes your binding idiomatic</li>
+<li><strong>Design choices</strong> explaining how your binding is idiomatic</li>
 </ul>
 </li>
 </ul>
