deploy: 72967148cfdb4f7c45f11cd1c672bce3a06c460b

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ close_window()
 <ul>
 <li>A <strong>GitHub repository</strong> containing <em>the code</em> and a <em>report</em> that includes (at least):
 <ul>
-<li><strong>Design choices</strong> explaining how your binding is idiomatic</li>
+<li><strong>Design choices</strong> explaining what makes the interface idiomatic</li>
 </ul>
 </li>
 </ul>
