--- a/index.html
+++ b/index.html
@@ -653,14 +653,14 @@ close_window()
 <li>
 <p><strong>Requirements</strong>:</p>
 <ul>
-<li><strong>Native</strong> code containing at least one function and one structure. Refer to <a href="https://github.com/oz123/awesome-c">awesome C libraries</a> for examples.</li>
+<li><strong>Wrapped</strong> code containing at least one function and one type definition (class/interface). Refer to <a href="https://github.com/oz123/awesome-c">awesome C libraries</a> for examples.</li>
 <li>Create an idiomatic interface in the target language.</li>
 </ul>
 </li>
 <li>
 <p><strong>Deliverables</strong>:</p>
 <ul>
-<li>A <strong>GitHub repository</strong> containing <em>the code</em> and a <em>report</em> that includes (at least):
+<li>A <strong>GitHub repository</strong> containing <em>the code</em> and a <em>report</em>  (README.md) that includes (at least):
 <ul>
 <li><strong>Design choices</strong> explaining what makes the interface idiomatic</li>
 </ul>
