deploy: 1576b225ac4f4b8c24776ab60c969f713f9035b0

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ PDF slides @ <a href="https://cric96.github.io/phd-course-python-binding/index.p
 <ul>
 <li>Build the shared library</li>
 </ul>
-<pre is="marp-pre" data-auto-scaling="downscale-only"><code class="language-bash">invoke build-libray
+<pre is="marp-pre" data-auto-scaling="downscale-only"><code class="language-bash">invoke build-library
 </code></pre>
 <ul>
 <li>Run the Python script</li>
